--- a/vaultai/frontend/index.html
+++ b/vaultai/frontend/index.html
@@ -1,11 +1,27 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>ChainVault - DeFi RWA Lending Platform</title>
+    <meta name="description" content="Cross-chain RWA tokenization and lending platform powered by Chainlink" />
+    <meta name="author" content="ChainVault" />
+
+    <meta property="og:title" content="ChainVault - DeFi RWA Lending Platform" />
+    <meta property="og:description" content="Cross-chain RWA tokenization and lending platform powered by Chainlink" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@chainvault" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
